<?xml version="1.0" encoding="utf-8"?>
<input-method xmlns:android="http://schemas.android.com/apk/res/android">

    <subtype
        android:label="@string/keyboard_subtype_label_en"
        android:imeSubtypeLocale="en_US"
        android:imeSubtypeMode="keyboard"
        android:isAsciiCapable="true" />

    <subtype
        android:label="@string/keyboard_subtype_label_es"
        android:imeSubtypeLocale="es_ES"
        android:imeSubtypeMode="keyboard"
        android:isAsciiCapable="true" />

    <subtype
        android:label="@string/keyboard_subtype_label_fr"
        android:imeSubtypeLocale="fr_FR"
        android:imeSubtypeMode="keyboard"
        android:isAsciiCapable="true" />

    <subtype
        android:label="@string/keyboard_subtype_label_de"
        android:imeSubtypeLocale="de_DE"
        android:imeSubtypeMode="keyboard"
        android:isAsciiCapable="true" />
    <subtype
        android:label="@string/keyboard_subtype_label_ja"
        android:imeSubtypeLocale="ja_JP"
        android:imeSubtypeMode="keyboard"
        android:isAsciiCapable="false" />

    <subtype
        android:label="@string/keyboard_subtype_label_ko"
        android:imeSubtypeLocale="ko_KR"
        android:imeSubtypeMode="keyboard"
        android:isAsciiCapable="false" />
</input-method>
